[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph"
version = "0.1.0"
description = "A CLI application for graphing out CSV files"
readme = "README.md"
authors = [{ name = "Riley Rice", email = "riceriley59@gmail.com" }]
dependencies = [
    "click >= 8.1.3",
    "pandas >= 2.2.3",
    "matplotlib >= 3.10.1",
]

[project.scripts]
graph = "graph.__main__:cli"
